# advanced_vtol_calculator

./: Equations.md  main.py  pyproject.toml  scratchpad.py  test.py
