[project]
name = "advanced-vtol-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.16.5",
    "polars>=1.34.0",
    "plotly[express]>=6.3.1",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]
